# RVL_VLM

./: .gitattributes  .gitignore  README_VR_TELEOP_ORIGINAL.md  readme.md  setup_franka.sh  常用命令.md
franka/src/franka_ros2/franka_fr3_moveit_config/rviz/: moveit.rviz
tqq/src/anygrasp_roi/: README.md  package.xml  setup.cfg  setup.py
tqq/src/anygrasp_roi/anygrasp_roi/: roi_anygrasp_controller.py
tqq/src/anygrasp_roi/config/: roi_anygrasp.yaml
tqq/src/anygrasp_roi/launch/: roi_anygrasp.launch.py
tqq/src/anygrasp_roi/resource/: anygrasp_roi
tqq/src/anygrasp_roi/scripts/: install_anygrasp_assets.sh
tqq/src/audio_dialog/: package.xml  setup.cfg  setup.py
tqq/src/audio_dialog/audio_dialog/: audio_dialog_node.py
tqq/src/control/: README.md  package.xml  setup.py
tqq/src/control/config/: graspnet_target_control.yaml  move_home.yaml  object_target_control.yaml  realsense_aligned_depth.yaml
tqq/src/control/control/: graspnet_target_controller.py  move_home.py  object_target_cli.py  object_target_controller.py
tqq/src/control/launch/: graspnet_target_control.launch.py  move_home.launch.py  object_target_control.launch.py
tqq/src/doubao_vision_box/: package.xml  setup.cfg  setup.py
tqq/src/doubao_vision_box/config/: doubao_vision_box.yaml
tqq/src/doubao_vision_box/doubao_vision_box/: doubao_vision_box_node.py
tqq/src/doubao_vision_box/launch/: doubao_vision_box.launch.py
tqq/src/easy_handeye2/easy_handeye2/easy_handeye2/: handeye_publisher.py
tqq/src/easy_handeye2/easy_handeye2/launch/: publish.launch.py
tqq/src/economic_grasp_roi/: README.md  package.xml  setup.cfg  setup.py
tqq/src/economic_grasp_roi/config/: roi_economic_grasp.yaml
tqq/src/economic_grasp_roi/economic_grasp_roi/: open3d_preview.py  roi_economic_grasp_controller.py
tqq/src/economic_grasp_roi/launch/: roi_economic_grasp.launch.py
tqq/src/economic_grasp_roi/scripts/: install_economic_grasp_deps.sh
tqq/src/franka_camera/: CMakeLists.txt  package.xml
tqq/src/franka_camera/config/: franka.config.yaml  realsense.yaml
tqq/src/franka_camera/launch/: handeye_calibrate.launch.py  realsense.launch.py
tqq/src/franka_vr_teleop/: CMakeLists.txt  README.md  franka_vr_teleop.xml  package.xml
tqq/src/franka_vr_teleop/config/: fr3_moveit_servo.yaml  quest3_axis_mapping.yaml  quest3_servo_teleop.yaml  quest3_teleop.yaml  servo_fr3_ros_controllers.yaml  vr_teleop_controllers.yaml
tqq/src/franka_vr_teleop/include/franka_vr_teleop/: vr_cartesian_velocity_controller.hpp
tqq/src/franka_vr_teleop/launch/: quest3_franka_servo_teleop.launch.py  quest3_franka_teleop.launch.py
tqq/src/franka_vr_teleop/scripts/: quest3_gripper_bridge.py  quest3_pose_to_twist.py  quest3_udp_bridge.py  start_moveit_servo.py
tqq/src/franka_vr_teleop/src/: vr_cartesian_velocity_controller.cpp
tqq/src/franka_vr_teleop/unity/: Quest3UdpSender.cs
tqq/src/mcp/: CMakeLists.txt  README.md  package.xml
tqq/src/mcp/config/: mcp_omni_client.yaml  mcp_server.yaml
tqq/src/mcp/launch/: llm_api_grasp.launch.py  llm_yolo_grasp.launch.py  mcp_omni_client.launch.py  mcp_server.launch.py
tqq/src/mcp/mcp_nodes/: camera_viewer.py  container_place.py  gripper.py  mcp_omni_client.py  mcp_server.py  mcp_shared.py  planning.py  scene_memory.py  vision.py
tqq/src/mcp/scripts/: camera_viewer  mcp_omni_client  mcp_server
tqq/src/mcp/srv/: CallTool.srv  ListTools.srv  MoveAxis.srv  PlaceIntoContainer.srv  PlaceRelative.srv
tqq/src/speech/: README.md  package.xml  setup.py
tqq/src/speech/config/: whisper_speak.yaml
tqq/src/speech/launch/: whisper_speak.launch.py
tqq/src/speech/speech/: whisper_speak.py
