<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_camera</name>
  <version>0.1.0</version>
  <description>RealSense camera bringup for franka secondary development.</description>
  <maintainer email="tqq@todo.todo">tqq</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>easy_handeye2</exec_depend>
  <exec_depend>franka_fr3_moveit_config</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
